fix(components/link): increase size/visibility of border-bottom underline on hover

--- a/src/components/link/link.scss
+++ b/src/components/link/link.scss
@@ -16,7 +16,7 @@
     background-color: colors.$blue;
     position: absolute;
     left: 0;
-    bottom: -0.1rem;
+    bottom: -0.2rem;
     transition: width 250ms ease-out;
   }
 
